fixed some spacing and format issues on work page

--- a/src/less/work.less
+++ b/src/less/work.less
@@ -9,13 +9,14 @@
 	border-radius: 20px;
 	padding-bottom: 20px;
 
-	.workCategory{
+	.workCategory {
 		overflow: hidden;
 	}
 
 	h1 {
 		padding: 20px 0 10px;
 		margin-top: 0;
+		margin-bottom: 10px;
 		font-size: 25px;
 		border-bottom: 2px solid var(--grey);
 		width: 100%;
@@ -24,7 +25,6 @@
 	.workItem {
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
 		margin-left: 20px;
 		width: 100%;
 
@@ -32,7 +32,7 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			transform: translate(0, 6px);
+			transform: translate(0, 16px);
 
 			.svg {
 				width: 20px;
@@ -58,16 +58,23 @@
 			}
 		}
 
+		p{
+			width: calc(100% - 20px);
+		}
+
 		.text {
 			margin-left: 20px;
+			margin-top: 10px;
 
 			.titleBlock {
 				height: fit-content;
 				margin-bottom: 10px;
+				font-size: 17px;
 
 				.workTitle {
-					font-weight: bold;
 					font-size: 20px;
+					font-weight: bold;
+					margin-bottom: 3px;
 				}
 
 				:hover {
